--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
   <div class="container text-center">
     <div class="row">
-      <div class="col-sm-4" style="border:1px">
+      <div class="col-sm-4">
         <h3>Imperial Player</h3>
         <div id="imperialPlayer" class="row"></div>
       </div>
@@ -52,91 +52,83 @@
       };
 
       // Add infor for Imperial player
-      var imperialPlayer = $("<div/>").attr({
-        class:"well text-left",
+      var imperialPlayer = $('<div/>').attr({
+        class: 'well text-left',
       });
 
       // Create sub divs for each attribute
-      var imperialPlayerName = $("<h4/>").attr({
-        class:"playerName text-center"
+      var imperialPlayerName = $('<h4/>').attr({
+        class: 'playerName text-center'
       }).text(data.imperialPlayer.name);
 
-      var classDeck = $("<div/>").attr({
-        class:"classDeck",
-      }).text("Class Deck: " + data.imperialPlayer.classDeck);
+      var classDeck = $('<div/>').attr({
+        class: 'classDeck',
+      }).text('Class Deck: ' + data.imperialPlayer.classDeck);
 
-      var totalXP = $("<div/>").attr({
-        class:"playerXP",
-      }).text("Total XP: " + data.imperialPlayer.totalXP);
+      var totalXP = $('<div/>').attr({
+        class: 'playerXP',
+      }).text('Total XP: ' + data.imperialPlayer.totalXP);
 
-      var currentXP = $("<div/>").attr({
-        class:"playerXP",
-      }).text("Current XP: " + data.imperialPlayer.currentXP);
+      var currentXP = $('<div/>').attr({
+        class: 'playerXP',
+      }).text('Current XP: ' + data.imperialPlayer.currentXP);
 
-      var influence = $("<div/>").attr({
-        class:"influence",
-      }).text("Influence: " + data.imperialPlayer.influence);
+      var influence = $('<div/>').attr({
+        class: 'influence',
+      }).text('Influence: ' + data.imperialPlayer.influence);
 
-      var upgrades = createListObject(data.imperialPlayer.upgrades, "upgrades", "Upgrades: ");
+      var upgrades = createListObject(data.imperialPlayer.upgrades, 'upgrades', 'Upgrades: ');
 
-      imperialPlayer.append(imperialPlayerName);
-      imperialPlayer.append(classDeck);
-      imperialPlayer.append(totalXP);
-      imperialPlayer.append(currentXP);
-      imperialPlayer.append(influence);
-      imperialPlayer.append(upgrades);
-      $('#imperialPlayer').append(imperialPlayer);
+      imperialPlayer.append(imperialPlayerName, classDeck, totalXP, currentXP, influence, upgrades);
+      $('#imperialPlayer').html(imperialPlayer);
 
       // Add info for each rebel player
       for (var index in data.rebelPlayers) {
+        var rebel = data.rebelPlayers[index];
         // Create div for each player and sub divs for each attribute
-        var rebel = $("<div/>").attr({
-          class:"well col-sm-6 text-left",
+        var rebelContainer = $('<div/>').attr({
+          class: 'well col-sm-6 text-left',
         });
 
         // Create a div for each player attribute
-        var name = $("<h4/>").attr({
-          class:"playerName text-center"
-        }).text(data.rebelPlayers[index].name);
+        var name = $('<h4/>').attr({
+          class: 'playerName text-center'
+        }).text(rebel.name);
 
-        var hero = $("<div/>").attr({
-          class:"hero",
-        }).text("Hero: " + data.rebelPlayers[index].hero);
+        var hero = $('<div/>').attr({
+          class: 'hero',
+        }).text('Hero: ' + rebel.hero);
 
-        var xp = $("<div/>").attr({
-          class:"playerXP",
-        }).text("XP: " + data.rebelPlayers[index].currentXP);
+        var xp = $('<div/>').attr({
+          class: 'playerXP',
+        }).text('XP: ' + rebel.currentXP);
 
-        var upgrades = createListObject(data.rebelPlayers[index].upgrades, "upgrades text-left", "Upgrades: ");
-        var equipment = createListObject(data.rebelPlayers[index].equipment, "equipment", "Equipment: ");
+        var upgrades = createListObject(rebel.upgrades, 'upgrades text-left', 'Upgrades: ');
+        var equipment = createListObject(rebel.equipment, 'equipment', 'Equipment: ');
 
-        rebel.append(name);
-        rebel.append(hero);
-        rebel.append(xp);
-        rebel.append(upgrades);
-        rebel.append(equipment);
-        $('#rebelPlayers').append(rebel);
+        rebelContainer.append(name, hero, xp, upgrades, equipment);
+        $('#rebelPlayers').append(rebelContainer);
       };
       $('#dataDiv').text(JSON.stringify(data));
     });
 
     function createListObject(list, classString, listName) {
-      var listContainer = $("<div/>").attr({
+      var listContainer = $('<div/>').attr({
       }).text(listName);
 
-      var listObject = $("<ul/>").attr({
-        class:classString,
+      var listObject = $('<ul/>').attr({
+        class: classString,
       });
 
-      for (var i in list) {
-        item = $("<li/>").attr({
-          class:"classString"
-        }).text(list[i]);
-        listObject.append(item);
-      };
+      var items = list.map(function(item) {
+        return $('<li/>').attr({
+          class: classString,
+        }).text(item);
+      });
 
-      listContainer.append(listObject)
-      return listContainer
+      listObject.append(items);
+      listContainer.append(listObject);
+      return listContainer;
     };
   </script>
 </body>
