--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,14 @@
   <div class="container text-center">
     <div class="row">
       <div class="col-sm-4">
-        <h3>Imperial Player</h3>
-        <div id="imperialPlayer" class="row"></div>
+        <h3>Imperial</h3>
+        <div id="imperialPlayer"></div>
+        <h3>Rebel Team Stats</h3>
+        <div id="rebelTeamStats"></div>
       </div>
       <div class="col-sm-8">
-        <h3>Rebel Players</h3>
-        <div id="rebelPlayers" class="row"></div>
+        <h3>Rebel</h3>
+        <div id="rebelPlayers"></div>
       </div>
     </div>
   </div>
@@ -38,8 +40,6 @@
     <h3>Completed Missions</h3>
     <div id="missionList"></div>
   </div>
-
-  <div id="dataDiv">test</div>
 
   <script type="text/javascript" src="/tracker.js"></script>
 
