New game form collects data but does not submit it.

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,27 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navButton1" aria-expanded="false">
+          <span class="sr-only">Toggle Navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Imperial Assault Tracker</a>
+      </div>
+      <div class="collapse navbar-collapse" id="navButton1">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Game<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/new-game.html">New Game</a></li>
+                <li><a href="/">Game List</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="container text-center">
     <h1 id="campaignName">Campaign</h1>
     <h5 id="campaignType">Campaign Type</h5>
